--- a/index.html
+++ b/index.html
@@ -8,72 +8,84 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <!--HEADER-->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html">
+          <span class="logoweb">Web</span><span class="logostudio">Studio</span>
+        </a>
         <ul>
           <li>
-            <a href="./index.html">Studio</a>
+            <a class="headertext" href="./index.html">Studio</a>
           </li>
           <li>
-            <a href="./index.html">Portfolio</a>
+            <a class="headertext" href="./portfolio.html" target="_self"
+              >Portfolio</a
+            >
           </li>
           <li>
-            <a href="./index.html">Contacts</a>
+            <a class="headertext" href="./index.html">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
+    <!--Main-->
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <!--Hero image-->
+      <section class="hero">
+        <h1 class="herotext">Effective Solutions for Your Business</h1>
+        <button class="herobutton" type="button">
+          <i class="buttontext">Order Service</i>
+        </button>
       </section>
+      <!--Section 1-->
       <section>
-        <h2>.</h2>
+        <h2 hidden>.</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="title">Strategy</h3>
+            <p class="title-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="title">Punctuality</h3>
+            <p class="title-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="title">Diligence</h3>
+            <p class="title-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="title">Technologies</h3>
+            <p class="title-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>What are we doing</h2>
+      <section class="section2">
+        <h2 class="we">What are we doing</h2>
         <ul>
           <li>
             <img
@@ -101,55 +113,59 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+      <section class="section3">
+        <h2 class="we">Our Team</h2>
         <ul>
           <li>
             <img
               src="./images/mark_guerrero.jpg"
               alt="Mark Guerrero Product Designer"
               width="264"
-              height="264"
+              height="380"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team">Mark Guerrero</h3>
+            <p class="rank">Product Designer</p>
           </li>
           <li>
             <img
               src="./images/tom_ford.jpg"
               alt="Tom Ford Frontend Developer"
               width="264"
-              height="264"
+              height="380"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team">Tom Ford</h3>
+            <p class="rank">Frontend Developer</p>
           </li>
           <li>
             <img
               src="./images/camila_garcia.jpg"
               alt="Camila Garcia Marketing"
               width="264"
-              height="264"
+              height="380"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team">Camila Garcia</h3>
+            <p class="rank">Marketing</p>
           </li>
           <li>
             <img
               src="./images/daniel_wilson.jpg"
               alt="Daniel Wilson UI Designer"
               width="264"
-              height="264"
+              height="380"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team">Daniel Wilson</h3>
+            <p class="rank">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
+    <!--Footer-->
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a class="logo" href="./index.html">
+        <span class="logoweb">Web</span
+        ><span class="footer-studio">Studio</span>
+      </a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
