--- a/index.html
+++ b/index.html
@@ -6,37 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-home-work-01</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!--HEADER-->
     <header>
       <nav>
         <a class="logo" href="./index.html">
-          <span class="logoweb">Web</span><span class="logostudio">Studio</span>
+          Web<span class="link">Studio</span>
         </a>
-        <ul>
+        <ul class="list">
           <li>
-            <a class="headertext" href="./index.html">Studio</a>
+            <a class="list-type link" href="./index.html">Studio</a>
           </li>
           <li>
-            <a class="headertext" href="./portfolio.html" target="_self"
+            <a class="list-type link" href="./portfolio.html" target="_self"
               >Portfolio</a
             >
           </li>
           <li>
-            <a class="headertext" href="./index.html">Contacts</a>
+            <a class="list-type link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="list">
           <li>
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="adress link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="adress link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -46,14 +54,12 @@
       <!--Hero image-->
       <section class="hero">
         <h1 class="herotext">Effective Solutions for Your Business</h1>
-        <button class="herobutton" type="button">
-          <i class="buttontext">Order Service</i>
-        </button>
+        <button class="herobutton" type="button">Order Service</button>
       </section>
       <!--Section 1-->
       <section>
         <h2 hidden>.</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h3 class="title">Strategy</h3>
             <p class="title-text">
@@ -85,8 +91,8 @@
         </ul>
       </section>
       <section class="section2">
-        <h2 class="we">What are we doing</h2>
-        <ul>
+        <h2 class="we-make">What are we doing</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/img_1.jpg"
@@ -114,8 +120,8 @@
         </ul>
       </section>
       <section class="section3">
-        <h2 class="we">Our Team</h2>
-        <ul>
+        <h2 class="we-make">Our Team</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/mark_guerrero.jpg"
@@ -160,10 +166,9 @@
       </section>
     </main>
     <!--Footer-->
-    <footer>
+    <footer class="footer">
       <a class="logo" href="./index.html">
-        <span class="logoweb">Web</span
-        ><span class="footer-studio">Studio</span>
+        Web<span class="footer-logo">Studio</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
