--- a/portfolio.html
+++ b/portfolio.html
@@ -5,192 +5,166 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./css/normalize.css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!--HEADER-->
     <header>
       <nav>
         <a class="logo" href="./index.html">
-          <span class="logoweb">Web</span><span class="logostudio">Studio</span>
+          Web<span class="link">Studio</span>
         </a>
-        <ul>
+        <ul class="list">
           <li>
-            <a class="headertext" href="./index.html">Studio</a>
+            <a class="list-type link" href="./index.html">Studio</a>
           </li>
           <li>
-            <a class="headertext" href="./portfolio.html">Portfolio</a>
+            <a class="list-type link" href="./portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a class="headertext" href="./index.html">Contacts</a>
+            <a class="list-type link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="list">
           <li>
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="adress link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="adress link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
     <main>
       <section>
-        <h2 hidden>.</h2>
-        <div>
-          <ul>
-            <li>
-              <button type="button" class="button-all">
-                <i class="all">All</i>
-              </button>
-              <img src="./images/finger.svg" alt="finger" hidden />
-            </li>
-            <li>
-              <button type="button" class="other-button">
-                <i class="buttons">Web Site</i>
-              </button>
-            </li>
-            <li>
-              <button type="button" class="other-button">
-                <i class="buttons">App</i>
-              </button>
-            </li>
-            <li>
-              <button type="button" class="other-button">
-                <i class="buttons">Design</i>
-              </button>
-            </li>
-            <li>
-              <button type="button" class="other-button">
-                <i class="buttons">Marketing</i>
-              </button>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section>
-        <h2 hidden>.</h2>
-        <div>
-          <ul>
-            <li>
-              <img
-                src="./images/bankapp.jpg"
-                alt="bankapp"
-                width="360"
-                height="300"
-              />
-              <h3 class="title">Banking App Interface Concept</h3>
-              <p class="title-text">App</p>
-            </li>
-            <li>
-              <img
-                src="./images/cashless_payment.jpg"
-                alt="cashless payment"
-                width="360"
-                height="300"
-              />
-              <h3 class="title">Cashless Payment</h3>
-              <p class="title-text">Marketing</p>
-            </li>
-            <li>
-              <img
-                src="./images/meditation_app.jpg"
-                alt="meditation app"
-                width="360"
-                height="300"
-              />
-              <h3 class="title">Meditation App</h3>
-              <p class="title-text">App</p>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section>
-        <h2 hidden>.</h2>
-        <div>
-          <ul>
-            <li>
-              <img
-                src="./images/taxi_service.jpg"
-                alt="taxi service"
-                width="360"
-                height="300"
-              />
-              <h3 class="title">Taxi service</h3>
-              <p class="title-text">Marketing</p>
-            </li>
-            <li>
-              <img
-                src="./images/screen_illustration.jpg"
-                alt="screen illustration"
-                width="360"
-                height="300"
-              />
-              <h3 class="title">Screen Illustration</h3>
-              <p class="title-text">Design</p>
-            </li>
-            <li>
-              <img
-                src="./images/online_courses.jpg"
-                alt="online courses"
-                width="360"
-                height="300"
-              />
-              <h3 class="title">Online courses</h3>
-              <p class="title-text">Marketing</p>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section>
-        <h2 hidden>.</h2>
-        <div>
-          <ul>
-            <li>
-              <img
-                src="./images/instagram_stories_concept.jpg"
-                alt="instgram
+        <h1 hidden>.</h1>
+        <ul class="list">
+          <li>
+            <button type="button" class="btn-first">All</button>
+          </li>
+          <li>
+            <button type="button" class="btn-first">Web Site</button>
+          </li>
+          <li>
+            <button type="button" class="btn-first">App</button>
+          </li>
+          <li>
+            <button type="button" class="btn-first">Design</button>
+          </li>
+          <li>
+            <button type="button" class="btn-first">Marketing</button>
+          </li>
+        </ul>
+        <ul class="list">
+          <li class="link">
+            <img
+              src="./images/bankapp.jpg"
+              alt="bankapp"
+              width="360"
+              height="300"
+            />
+            <h2 class="title">Banking App Interface Concept</h2>
+            <p class="title-text">App</p>
+          </li>
+          <li class="link">
+            <img
+              src="./images/cashless_payment.jpg"
+              alt="cashless payment"
+              width="360"
+              height="300"
+            />
+            <h2 class="title">Cashless Payment</h2>
+            <p class="title-text">Marketing</p>
+          </li>
+          <li class="link">
+            <img
+              src="./images/meditation_app.jpg"
+              alt="meditation app"
+              width="360"
+              height="300"
+            />
+            <h2 class="title">Meditation App</h2>
+            <p class="title-text">App</p>
+          </li>
+          <li class="link">
+            <img
+              src="./images/taxi_service.jpg"
+              alt="taxi service"
+              width="360"
+              height="300"
+            />
+            <h2 class="title">Taxi service</h2>
+            <p class="title-text">Marketing</p>
+          </li>
+          <li class="link">
+            <img
+              src="./images/screen_illustration.jpg"
+              alt="screen illustration"
+              width="360"
+              height="300"
+            />
+            <h2 class="title">Screen Illustration</h2>
+            <p class="title-text">Design</p>
+          </li>
+          <li class="link">
+            <img
+              src="./images/online_courses.jpg"
+              alt="online courses"
+              width="360"
+              height="300"
+            />
+            <h2 class="title">Online courses</h2>
+            <p class="title-text">Marketing</p>
+          </li>
+          <li class="link">
+            <img
+              src="./images/instagram_stories_concept.jpg"
+              alt="instgram
             stories concept"
-                width="360"
-                height="300"
-              />
-              <h3 class="title">Instagram Stories Concept</h3>
-              <p class="title-text">Design</p>
-            </li>
-            <li>
-              <img
-                src="./images/organic_food.jpg"
-                alt="organic food"
-                width="360"
-                height="300"
-              />
-              <h3 class="title">Organic Food</h3>
-              <p class="title-text">Web Site</p>
-            </li>
-            <li>
-              <img
-                src="./images/fresh_coffee.jpg"
-                alt="fresh coffee"
-                width="360"
-                height="300"
-              />
-              <h3 class="title">Fresh Coffee</h3>
-              <p class="title-text">Web Site</p>
-            </li>
-          </ul>
-        </div>
+              width="360"
+              height="300"
+            />
+            <h2 class="title">Instagram Stories Concept</h2>
+            <p class="title-text">Design</p>
+          </li>
+          <li class="link">
+            <img
+              src="./images/organic_food.jpg"
+              alt="organic food"
+              width="360"
+              height="300"
+            />
+            <h2 class="title">Organic Food</h2>
+            <p class="title-text">Web Site</p>
+          </li>
+          <li class="link">
+            <img
+              src="./images/fresh_coffee.jpg"
+              alt="fresh coffee"
+              width="360"
+              height="300"
+            />
+            <h2 class="title">Fresh Coffee</h2>
+            <p class="title-text">Web Site</p>
+          </li>
+        </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a class="logo" href="./index.html">
-        <span class="logoweb">Web</span
-        ><span class="footer-studio">Studio</span>
+        Web<span class="footer-logo">Studio</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
