--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </section>
       <section class="section3">
         <h2 class="we-make">Our Team</h2>
-        <ul class="list">
+        <ul class="list staff">
           <li>
             <img
               src="./images/mark_guerrero.jpg"
