--- a/portfolio.html
+++ b/portfolio.html
@@ -163,7 +163,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="./index.html">
+      <a class="logo" class="link" href="./index.html">
         Web<span class="footer-logo">Studio</span>
       </a>
       <p class="footer-text">
