--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
     <!--HEADER-->
     <header>
       <nav>
-        <a class="logo" href="./index.html">
-          Web<span class="link">Studio</span>
+        <a class="logo link" href="./index.html">
+          Web<span class="linkcolor">Studio</span>
         </a>
         <ul class="list">
           <li>
@@ -32,17 +32,13 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="adresslink">
         <ul class="list">
           <li>
-            <a class="adress link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a class="adress link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -68,102 +64,120 @@
           </li>
         </ul>
         <ul class="list">
-          <li class="link">
-            <img
-              src="./images/bankapp.jpg"
-              alt="bankapp"
-              width="360"
-              height="300"
-            />
-            <h2 class="title">Banking App Interface Concept</h2>
-            <p class="title-text">App</p>
+          <li>
+            <a class="link">
+              <img
+                src="./images/bankapp.jpg"
+                alt="bankapp"
+                width="360"
+                height="300"
+              />
+              <h2 class="title">Banking App Interface Concept</h2>
+              <p class="title-text">App</p></a
+            >
           </li>
-          <li class="link">
-            <img
-              src="./images/cashless_payment.jpg"
-              alt="cashless payment"
-              width="360"
-              height="300"
-            />
-            <h2 class="title">Cashless Payment</h2>
-            <p class="title-text">Marketing</p>
+          <li>
+            <a class="link">
+              <img
+                src="./images/cashless_payment.jpg"
+                alt="cashless payment"
+                width="360"
+                height="300"
+              />
+              <h2 class="title">Cashless Payment</h2>
+              <p class="title-text">Marketing</p></a
+            >
           </li>
-          <li class="link">
-            <img
-              src="./images/meditation_app.jpg"
-              alt="meditation app"
-              width="360"
-              height="300"
-            />
-            <h2 class="title">Meditation App</h2>
-            <p class="title-text">App</p>
+          <li>
+            <a class="link">
+              <img
+                src="./images/meditation_app.jpg"
+                alt="meditation app"
+                width="360"
+                height="300"
+              />
+              <h2 class="title">Meditation App</h2>
+              <p class="title-text">App</p></a
+            >
           </li>
-          <li class="link">
-            <img
-              src="./images/taxi_service.jpg"
-              alt="taxi service"
-              width="360"
-              height="300"
-            />
-            <h2 class="title">Taxi service</h2>
-            <p class="title-text">Marketing</p>
+          <li>
+            <a class="link">
+              <img
+                src="./images/taxi_service.jpg"
+                alt="taxi service"
+                width="360"
+                height="300"
+              />
+              <h2 class="title">Taxi service</h2>
+              <p class="title-text">Marketing</p></a
+            >
           </li>
-          <li class="link">
-            <img
-              src="./images/screen_illustration.jpg"
-              alt="screen illustration"
-              width="360"
-              height="300"
-            />
-            <h2 class="title">Screen Illustration</h2>
-            <p class="title-text">Design</p>
+          <li>
+            <a class="link">
+              <img
+                src="./images/screen_illustration.jpg"
+                alt="screen illustration"
+                width="360"
+                height="300"
+              />
+              <h2 class="title">Screen Illustration</h2>
+              <p class="title-text">Design</p></a
+            >
           </li>
-          <li class="link">
-            <img
-              src="./images/online_courses.jpg"
-              alt="online courses"
-              width="360"
-              height="300"
-            />
-            <h2 class="title">Online courses</h2>
-            <p class="title-text">Marketing</p>
+          <li>
+            <a class="link">
+              <img
+                src="./images/online_courses.jpg"
+                alt="online courses"
+                width="360"
+                height="300"
+              />
+              <h2 class="title">Online courses</h2>
+              <p class="title-text">Marketing</p></a
+            >
           </li>
-          <li class="link">
-            <img
-              src="./images/instagram_stories_concept.jpg"
-              alt="instgram
+          <li>
+            <a class="link">
+              <img
+                src="./images/instagram_stories_concept.jpg"
+                alt="instgram
             stories concept"
-              width="360"
-              height="300"
-            />
-            <h2 class="title">Instagram Stories Concept</h2>
-            <p class="title-text">Design</p>
+                width="360"
+                height="300"
+              />
+              <h2 class="title">Instagram Stories Concept</h2>
+              <p class="title-text">Design</p></a
+            >
           </li>
-          <li class="link">
-            <img
-              src="./images/organic_food.jpg"
-              alt="organic food"
-              width="360"
-              height="300"
-            />
-            <h2 class="title">Organic Food</h2>
-            <p class="title-text">Web Site</p>
+          <li>
+            <a class="link">
+              <img
+                src="./images/organic_food.jpg"
+                alt="organic food"
+                width="360"
+                height="300"
+              />
+              <h2 class="title">Organic Food</h2>
+              <p class="title-text">Web Site</p></a
+            >
           </li>
-          <li class="link">
-            <img
-              src="./images/fresh_coffee.jpg"
-              alt="fresh coffee"
-              width="360"
-              height="300"
-            />
-            <h2 class="title">Fresh Coffee</h2>
-            <p class="title-text">Web Site</p>
+          <li>
+            <a class="link">
+              <img
+                src="./images/fresh_coffee.jpg"
+                alt="fresh coffee"
+                width="360"
+                height="300"
+              />
+              <h2 class="title">Fresh Coffee</h2>
+              <p class="title-text">Web Site</p></a
+            >
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" class="link" href="./index.html">
+      <a class="logo link" href="./index.html">
         Web<span class="footer-logo">Studio</span>
       </a>
       <p class="footer-text">
