--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <!--HEADER-->
     <header>
       <nav>
-        <a class="logo" href="./index.html">
-          Web<span class="link">Studio</span>
+        <a class="logo link" href="./index.html">
+          Web<span class="linkcolor">Studio</span>
         </a>
         <ul class="list">
           <li>
@@ -34,17 +34,13 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="adresslink">
         <ul class="list">
           <li>
-            <a class="adress link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a class="adress link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -167,7 +163,7 @@
     </main>
     <!--Footer-->
     <footer class="footer">
-      <a class="logo" href="./index.html">
+      <a class="logo link" href="./index.html">
         Web<span class="footer-logo">Studio</span>
       </a>
       <p class="footer-text">
