--- a/portfolio.html
+++ b/portfolio.html
@@ -35,10 +35,14 @@
       <address class="adresslink">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="title-text link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="title-text link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -108,7 +112,7 @@
                 width="360"
                 height="300"
               />
-              <h2 class="title">Taxi service</h2>
+              <h2 class="title">Taxi Service</h2>
               <p class="title-text">Marketing</p></a
             >
           </li>
@@ -120,7 +124,7 @@
                 width="360"
                 height="300"
               />
-              <h2 class="title">Screen Illustration</h2>
+              <h2 class="title">Screen Illustrations</h2>
               <p class="title-text">Design</p></a
             >
           </li>
@@ -132,7 +136,7 @@
                 width="360"
                 height="300"
               />
-              <h2 class="title">Online courses</h2>
+              <h2 class="title">Online Courses</h2>
               <p class="title-text">Marketing</p></a
             >
           </li>
