--- a/index.html
+++ b/index.html
@@ -119,48 +119,56 @@
           </li>
         </ul>
       </section>
-      <section class="section3">
+      <section class="sectionthree">
         <h2 class="we-make">Our Team</h2>
-        <ul class="list staff">
+        <ul class="list">
           <li>
-            <img
-              src="./images/mark_guerrero.jpg"
-              alt="Mark Guerrero Product Designer"
-              width="264"
-              height="380"
-            />
-            <h3 class="team">Mark Guerrero</h3>
-            <p class="rank">Product Designer</p>
+            <a class="staff">
+              <img
+                src="./images/mark_guerrero.jpg"
+                alt="Mark Guerrero Product Designer"
+                width="264"
+                height="380"
+              />
+              <h3 class="team">Mark Guerrero</h3>
+              <p class="rank">Product Designer</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/tom_ford.jpg"
-              alt="Tom Ford Frontend Developer"
-              width="264"
-              height="380"
-            />
-            <h3 class="team">Tom Ford</h3>
-            <p class="rank">Frontend Developer</p>
+            <a class="staff">
+              <img
+                src="./images/tom_ford.jpg"
+                alt="Tom Ford Frontend Developer"
+                width="264"
+                height="380"
+              />
+              <h3 class="team">Tom Ford</h3>
+              <p class="rank">Frontend Developer</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/camila_garcia.jpg"
-              alt="Camila Garcia Marketing"
-              width="264"
-              height="380"
-            />
-            <h3 class="team">Camila Garcia</h3>
-            <p class="rank">Marketing</p>
+            <a class="staff">
+              <img
+                src="./images/camila_garcia.jpg"
+                alt="Camila Garcia Marketing"
+                width="264"
+                height="380"
+              />
+              <h3 class="team">Camila Garcia</h3>
+              <p class="rank">Marketing</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/daniel_wilson.jpg"
-              alt="Daniel Wilson UI Designer"
-              width="264"
-              height="380"
-            />
-            <h3 class="team">Daniel Wilson</h3>
-            <p class="rank">UI Designer</p>
+            <a class="staff">
+              <img
+                src="./images/daniel_wilson.jpg"
+                alt="Daniel Wilson UI Designer"
+                width="264"
+                height="380"
+              />
+              <h3 class="team">Daniel Wilson</h3>
+              <p class="rank">UI Designer</p></a
+            >
           </li>
         </ul>
       </section>
