--- a/index.html
+++ b/index.html
@@ -122,53 +122,45 @@
       <section class="sectionthree">
         <h2 class="we-make">Our Team</h2>
         <ul class="list">
-          <li>
-            <a class="staff">
-              <img
-                src="./images/mark_guerrero.jpg"
-                alt="Mark Guerrero Product Designer"
-                width="264"
-                height="380"
-              />
-              <h3 class="team">Mark Guerrero</h3>
-              <p class="rank">Product Designer</p></a
-            >
+          <li class="staff">
+            <img
+              src="./images/mark_guerrero.jpg"
+              alt="Mark Guerrero Product Designer"
+              width="264"
+              height="380"
+            />
+            <h3 class="team">Mark Guerrero</h3>
+            <p class="rank">Product Designer</p>
           </li>
-          <li>
-            <a class="staff">
-              <img
-                src="./images/tom_ford.jpg"
-                alt="Tom Ford Frontend Developer"
-                width="264"
-                height="380"
-              />
-              <h3 class="team">Tom Ford</h3>
-              <p class="rank">Frontend Developer</p></a
-            >
+          <li class="staff">
+            <img
+              src="./images/tom_ford.jpg"
+              alt="Tom Ford Frontend Developer"
+              width="264"
+              height="380"
+            />
+            <h3 class="team">Tom Ford</h3>
+            <p class="rank">Frontend Developer</p>
           </li>
-          <li>
-            <a class="staff">
-              <img
-                src="./images/camila_garcia.jpg"
-                alt="Camila Garcia Marketing"
-                width="264"
-                height="380"
-              />
-              <h3 class="team">Camila Garcia</h3>
-              <p class="rank">Marketing</p></a
-            >
+          <li class="staff">
+            <img
+              src="./images/camila_garcia.jpg"
+              alt="Camila Garcia Marketing"
+              width="264"
+              height="380"
+            />
+            <h3 class="team">Camila Garcia</h3>
+            <p class="rank">Marketing</p>
           </li>
-          <li>
-            <a class="staff">
-              <img
-                src="./images/daniel_wilson.jpg"
-                alt="Daniel Wilson UI Designer"
-                width="264"
-                height="380"
-              />
-              <h3 class="team">Daniel Wilson</h3>
-              <p class="rank">UI Designer</p></a
-            >
+          <li class="staff">
+            <img
+              src="./images/daniel_wilson.jpg"
+              alt="Daniel Wilson UI Designer"
+              width="264"
+              height="380"
+            />
+            <h3 class="team">Daniel Wilson</h3>
+            <p class="rank">UI Designer</p>
           </li>
         </ul>
       </section>
